fix: overflow issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,8 +17,6 @@
 body {
   color: white;
   background: var(--c-primary);
-  max-width: 100vw;
-  overflow-x: hidden;
 }
 
 h2 {
